--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,12 +23,15 @@ android {
 
     defaultConfig {
         applicationId "deakin.gopher.guardian"
-        minSdkVersion 21
+        minSdkVersion 26
         targetSdkVersion 34
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables {
+            useSupportLibrary true
+        }
     }
 
     buildTypes {
@@ -44,8 +47,20 @@ android {
     buildFeatures {
         viewBinding true
         dataBinding true
+        compose true
     }
     namespace 'deakin.gopher.guardian'
+    kotlinOptions {
+        jvmTarget = '17'
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.5.4'
+    }
+    packaging {
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
+    }
 }
 
 spotless {
@@ -89,6 +104,15 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:23.3.1'
     implementation 'com.google.firebase:firebase-firestore-ktx:24.9.1'
     implementation 'com.google.android.gms:play-services-auth:20.7.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
+    implementation 'androidx.activity:activity-compose:1.8.1'
+    implementation platform('androidx.compose:compose-bom:2023.03.00')
+    implementation 'androidx.compose.ui:ui'
+    implementation 'androidx.compose.ui:ui-graphics'
+    implementation 'androidx.compose.ui:ui-tooling-preview'
+    implementation 'androidx.compose.material3:material3'
+    implementation platform('androidx.compose:compose-bom:2023.03.00')
+    implementation platform('androidx.compose:compose-bom:2023.03.00')
 
 
     testImplementation 'junit:junit:4.13.2'
@@ -115,6 +139,34 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.9.20"
+    androidTestImplementation platform('androidx.compose:compose-bom:2023.03.00')
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
+    androidTestImplementation platform('androidx.compose:compose-bom:2023.03.00')
+    androidTestImplementation platform('androidx.compose:compose-bom:2023.03.00')
+    debugImplementation 'androidx.compose.ui:ui-tooling'
+    debugImplementation 'androidx.compose.ui:ui-test-manifest'
+
+    // Material Design Date Time Picker
+    implementation 'com.maxkeppeler.sheets-compose-dialogs:core:1.2.0'
+    implementation 'com.maxkeppeler.sheets-compose-dialogs:date-time:1.2.0'
+
+    // For Jetpack Compose.
+    implementation("com.patrykandpatrick.vico:compose:1.13.0")
+
+    // For `compose`. Creates a `ChartStyle` based on an M2 Material Theme.
+    implementation("com.patrykandpatrick.vico:compose-m2:1.13.0")
+
+    // For `compose`. Creates a `ChartStyle` based on an M3 Material Theme.
+    implementation("com.patrykandpatrick.vico:compose-m3:1.13.0")
+
+    // Houses the core logic for charts and other elements. Included in all other modules.
+    implementation("com.patrykandpatrick.vico:core:1.13.0")
+
+    // For the view system.
+    implementation("com.patrykandpatrick.vico:views:1.13.0")
+
+    // Jetpack Compose navigation
+    implementation("androidx.navigation:navigation-compose:2.7.5")
 }
 
 apply plugin: 'com.google.gms.google-services'
