--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:replace="android:label"
+        tools:replace="android:allowBackup,android:label"
         tools:targetApi="31">
         <activity
             android:name=".view.patient.patientdata.heartrate.HeartRateActivity"
@@ -143,7 +143,8 @@
         <activity
             android:name=".view.patient.PatientDashboardActivity"
             android:exported="false" />
-        <activity android:name="deakin.gopher.guardian.view.general.TasksListActivity" />
+        <activity android:name="deakin.gopher.guardian.view.general.TasksListActivity"
+            android:exported="false"/>
 
         <service
             android:name=".model.FirebaseMessagingService"
