--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
-    id "com.diffplug.spotless" version "6.22.0"
+    id "com.diffplug.spotless" version "6.25.0"
 }
 
 android {
@@ -70,7 +70,9 @@ spotless {
     }
     kotlin {
         target 'src/*/java/**/*.kt'
-        ktlint()
+        ktlint().editorConfigOverride([
+                'ktlint_function_naming_ignore_when_annotated_with': 'Composable'
+        ])
     }
 }
 
