--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
-    id "com.diffplug.spotless" version "6.22.0"
+    id "com.diffplug.spotless" version "6.23.3"
 }
 
 android {
@@ -70,7 +70,7 @@ spotless {
     }
     kotlin {
         target 'src/*/java/**/*.kt'
-        ktlint()
+        ktlint().setEditorConfigPath("../.editorconfig")
     }
 }
 
@@ -135,7 +135,7 @@ dependencies {
     //ProfileCirle
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     //CropImg
-    api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
 
     implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
 
