--- a/settings.gradle
+++ b/settings.gradle
@@ -5,17 +5,17 @@ pluginManagement {
         gradlePluginPortal()
         google()
         mavenCentral()
-        maven { url='https://jcenter.bintray.com/'}
+        maven { url = 'https://jcenter.bintray.com/' }
     }
 }
 
 
 dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.PREFER_PROJECT)
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
         mavenCentral()
-        maven { url='https://jcenter.bintray.com/'}
+        maven { url = 'https://jcenter.bintray.com/' }
     }
 }
 rootProject.name = "Guardian"
