--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -183,6 +183,9 @@
         <activity android:name=".SupportingMealtimesActivity" />
 
 
+
+
+
         <activity android:name=".Module2CoursesActivity" />
         <activity android:name=".MedicationTechniqueActivity" />
         <activity android:name=".MedicationSafetyActivity" />
@@ -191,8 +194,8 @@
         <activity android:name=".InspiringLeadershipEIActivity" />
         <activity android:name=".EmotionalIntelligenceCommunicationActivity" />
         <activity android:name="deakin.gopher.guardian.view.general.NurseRosterActivity" />
-        <activity android:name=".view.FallDetection.FallDetectionActivity" />
-        <activity android:name=".view.FallDetection.FallAlertActivity" />
+<!--        <activity android:name=".view.falldetection.FallDetectionActivity" />-->
+<!--        <activity android:name=".view.falldetection.FallAlertActivity" />-->
         <activity android:name="deakin.gopher.guardian.view.caretaker.notifications.confirmincident.CallAmbulanceActivity" />
 
 
