--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,20 +5,19 @@
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
+
     <uses-permission android:name="android.permission.INTERNET" />
     <!-- For reading images -->
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
-
     <!-- For reading videos -->
     <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
     <uses-permission android:name="android.permission.CAMERA" />
-
-
     <!-- For reading audio -->
     <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
-
     <!-- Add WRITE permissions only if necessary -->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="28" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="28" />
     <!-- Add the permission here -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
@@ -34,171 +33,93 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
+        tools:ignore="ExtraText"
         tools:replace="android:allowBackup,android:label"
-        tools:targetApi="31"
-        tools:ignore="ExtraText">
-        <activity
-            android:name=".WelcomeActivity"
-            android:exported="false" />
-        <activity
-            android:name=".TrainingActivity"
-            android:exported="false" />
-        <activity
-            android:name=".Training2"
-            android:exported="false"></activity>
-        <activity
-            android:name=".Training"
-            android:exported="false" />
+        tools:targetApi="31">
+
+        <activity android:name=".WelcomeActivity" android:exported="false" />
+        <activity android:name=".TrainingActivity" android:exported="false" />
+        <activity android:name=".Training2" android:exported="false" />
+        <activity android:name=".Training" android:exported="false" />
+
         <activity
             android:name=".view.patient.patientdata.heartrate.HeartRateActivity"
             android:exported="false"
             android:label="@string/title_activity_heart_rate"
             android:theme="@style/Theme.TeamGuardians" />
-        <activity
-            android:name=".view.general.Setting"
-            android:exported="false" />
-        <activity
-            android:name=".view.general.PatientProfileAddActivity"
-            android:exported="false" />
-        <activity
-            android:name=".view.general.Homepage4admin"
-            android:exported="false" />
-        <activity
-            android:name=".view.general.Homepage4caretaker"
-            android:exported="false" />
-        <activity
-            android:name=".view.general.Homepage4nurse"
-            android:exported="false" />
-        <activity
-            android:name=".view.general.TaskDetailActivity"
-            android:exported="false" />
-        <activity
-            android:name=".view.general.TaskAddActivity"
-            android:exported="false" />
-        <activity
-            android:name=".view.general.UploadPhoto"
-            android:exported="false" />
-        <activity
-            android:name=".view.caretaker.notifications.falsealarm.FalseAlertConfirmedActivity"
-            android:exported="false" />
-        <activity
-            android:name=".view.caretaker.notifications.confirmincident.ConfirmIncidentActivity"
-            android:exported="false" />
-        <activity
-            android:name=".view.caretaker.CaretakerDashboardActivity"
-            android:exported="false" />
-        <activity
-            android:name=".view.caretaker.CaretakerProfileActivity"
-            android:exported="false" />
-        <activity
-            android:name=".view.caretaker.EditCaretakerProfileActivity"
-            android:exported="false" />
-        <activity
-            android:name=".view.patient.patientdata.healthdata.HealthDataActivity"
-            android:exported="false" />
-        <activity
-            android:name=".view.patient.associateradar.ActivitySuggestionActivity"
-            android:exported="false" />
-        <activity
-            android:name=".view.general.PatientProfileActivity"
-            android:exported="false" />
-        <activity
-            android:name=".view.general.ArchivedPatientListActivity"
-            android:exported="false" />
-        <activity
-            android:name=".view.patient.viewactivitydata.WeeklyActivityProfilingActivity"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
+
+        <activity android:name=".view.general.Setting" android:exported="false" />
+        <activity android:name=".view.general.PatientProfileAddActivity" android:exported="false" />
+        <activity android:name=".view.general.Homepage4admin" android:exported="false" />
+        <activity android:name=".view.general.Homepage4caretaker" android:exported="false" />
+        <activity android:name=".view.general.Homepage4nurse" android:exported="false" />
+        <activity android:name=".view.general.TaskDetailActivity" android:exported="false" />
+        <activity android:name=".view.general.TaskAddActivity" android:exported="false" />
+        <activity android:name=".view.general.UploadPhoto" android:exported="false" />
+
+        <activity android:name=".view.caretaker.notifications.falsealarm.FalseAlertConfirmedActivity" android:exported="false" />
+        <activity android:name=".view.caretaker.notifications.confirmincident.ConfirmIncidentActivity" android:exported="false" />
+        <activity android:name=".view.caretaker.CaretakerDashboardActivity" android:exported="false" />
+        <activity android:name=".view.caretaker.CaretakerProfileActivity" android:exported="false" />
+        <activity android:name=".view.caretaker.EditCaretakerProfileActivity" android:exported="false" />
+
+        <activity android:name=".view.patient.patientdata.healthdata.HealthDataActivity" android:exported="false" />
+        <activity android:name=".view.patient.associateradar.ActivitySuggestionActivity" android:exported="false" />
+        <activity android:name=".view.general.PatientProfileActivity" android:exported="false" />
+        <activity android:name=".view.general.ArchivedPatientListActivity" android:exported="false" />
+
+        <activity android:name=".view.patient.viewactivitydata.WeeklyActivityProfilingActivity" android:exported="false">
+            <meta-data android:name="android.app.lib_name" android:value="" />
         </activity>
-        <activity
-            android:name=".view.patient.associateradar.ActivityProfilingActivity"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
+
+        <activity android:name=".view.patient.associateradar.ActivityProfilingActivity" android:exported="false">
+            <meta-data android:name="android.app.lib_name" android:value="" />
         </activity>
-        <activity
-            android:name=".view.patient.careplan.CarePlanSummaryActivity"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
+
+        <activity android:name=".view.patient.careplan.CarePlanSummaryActivity" android:exported="false">
+            <meta-data android:name="android.app.lib_name" android:value="" />
         </activity>
-        <activity
-            android:name=".view.patient.careplan.CarePlanActivity"
-            android:exported="false" />
-        <activity
-            android:name=".view.patient.dailyreport.DailyReportSummaryActivity"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
+
+        <activity android:name=".view.patient.careplan.CarePlanActivity" android:exported="false" />
+
+        <activity android:name=".view.patient.dailyreport.DailyReportSummaryActivity" android:exported="false">
+            <meta-data android:name="android.app.lib_name" android:value="" />
         </activity>
-        <activity
-            android:name=".view.patient.dailyreport.DailyReportActivity"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
+
+        <activity android:name=".view.patient.dailyreport.DailyReportActivity" android:exported="false">
+            <meta-data android:name="android.app.lib_name" android:value="" />
         </activity>
-        <activity
-            android:name=".view.general.PatientListActivity"
-            android:exported="false" />
-        <activity
-            android:name=".view.general.PatientDetailsActivity"
-            android:exported="false" />
-        <activity
-            android:name=".view.general.AddPatientLogActivity"
-            android:exported="false" />
-        <activity
-            android:name=".view.general.RegisterActivity"
-            android:exported="false" />
-        <activity
-            android:name=".view.general.LoginActivity"
-            android:exported="false" />
-        <activity android:name=".view.general.PinCodeActivity"
-            android:exported="false" />
-        <activity
-            android:name=".view.general.AddNewPatientActivity"
-            android:exported="false" /> <!-- Kussay: may we need to change the start up page into login page -->
-        <activity
-            android:name=".view.general.MainActivity"
-            android:exported="true">
+
+        <activity android:name=".view.general.PatientListActivity" android:exported="false" />
+        <activity android:name=".view.general.PatientDetailsActivity" android:exported="false" />
+        <activity android:name=".view.general.AddPatientLogActivity" android:exported="false" />
+        <activity android:name=".view.general.RegisterActivity" android:exported="false" />
+        <activity android:name=".view.general.LoginActivity" android:exported="false" />
+        <activity android:name=".view.general.PinCodeActivity" android:exported="false" />
+        <activity android:name=".view.general.AddNewPatientActivity" android:exported="false" />
+
+        <!-- Launcher -->
+        <activity android:name=".view.general.MainActivity" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> <!-- These are here only for UI testing -->
-        <activity
-            android:name=".view.patient.patientdata.medicaldiagnostics.MedicalDiagnosticsActivity"
-            android:exported="false" />
-        <activity
-            android:name=".view.general.DrawerActivity"
-            android:exported="false" />
-        <activity
-            android:name=".view.patient.PatientDashboardActivity"
-            android:exported="false" />
-        <activity
-            android:name=".view.general.TasksListActivity"
-            android:exported="false" />
+        </activity>
+
+        <!-- UI testing samples -->
+        <activity android:name=".view.patient.patientdata.medicaldiagnostics.MedicalDiagnosticsActivity" android:exported="false" />
+        <activity android:name=".view.general.DrawerActivity" android:exported="false" />
+        <activity android:name=".view.patient.PatientDashboardActivity" android:exported="false" />
+        <activity android:name=".view.general.TasksListActivity" android:exported="false" />
 
         <activity android:name=".ModulesActivity" />
-
-
         <activity android:name=".Module1CoursesActivity" />
         <activity android:name=".HomecareInductionActivity" />
         <activity android:name=".InfectionControlActivity" />
         <activity android:name=".SupportingMealtimesActivity" />
-
-
         <activity android:name=".Module2CoursesActivity" />
         <activity android:name=".MedicationTechniqueActivity" />
         <activity android:name=".MedicationSafetyActivity" />
-
-
         <activity android:name=".Module3CoursesActivity" />
         <activity android:name=".InspiringLeadershipEIActivity" />
         <activity android:name=".EmotionalIntelligenceCommunicationActivity" />
@@ -212,6 +133,8 @@
             android:exported="false"
             android:label="Patient Exercise Modules" />
 
+        <!-- ✅ New screen -->
+        <activity android:name=".view.general.LogbookActivity" android:exported="false" />
 
         <service
             android:name=".model.FirebaseMessagingService"
@@ -225,7 +148,6 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
-        <activity android:name=".view.general.DashboardActivity"/>
+        <activity android:name=".view.general.DashboardActivity" />
     </application>
-
 </manifest>
