--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -150,6 +150,9 @@
             android:name=".view.general.PatientDetailsActivity"
             android:exported="false" />
         <activity
+            android:name=".view.general.AssignDoctorActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.general.AddPatientLogActivity"
             android:exported="false" />
         <activity
